--- a/ide.org
+++ b/ide.org
@@ -24,11 +24,11 @@ languages, using language server protocols (LSP).
    We activate showing the whitespace and other non-printable
    characters
    #+begin_src emacs-lisp
-     (require 'whitespace)
-     (add-hook 'prog-mode-hook
-               (lambda ()
-                 (whitespace-mode)
-                 ))
+     (use-package whitespace
+       :delight 
+       :hook ((prog-mode . whitespace-mode)
+              (org-mode . whitespace-mode))
+       )
    #+end_src
 
    White space cleanup on save / in prog-mode
@@ -77,7 +77,9 @@ languages, using language server protocols (LSP).
 
     (use-package lsp-mode
       :init
-      (setq lsp-keymap-prefix "C-c l")
+      (setq lsp-keymap-prefix "M-p l")
+      :bind
+      ("M-p F" . lsp-format-buffer)
       :config
       (setq lsp-headerline-breadcrumb-enable nil)
       :hook (
@@ -94,11 +96,10 @@ languages, using language server protocols (LSP).
 
 
     (use-package helm-lsp
-      :after (treemacs lsp-treemacs)
+      :after (treemacs lsp-treemacs helm)
       :commands helm-lsp-workspace-symbol)
   #+end_src
 
-  #+RESULTS:
 
 ** Icons Set "all-the-icons"
 
@@ -117,16 +118,13 @@ languages, using language server protocols (LSP).
      (use-package treemacs
        :after (lsp-mode)
        :commands (treemacs)
-       :hook (
-              (treemacs-mode . (lambda () (linum-mode -1))))
+       :hook ((treemacs-mode . (lambda () (text-scale-adjust -1))))
        :config
        (progn
          (with-eval-after-load 'ace-window
            (setq aw-ignored-buffers (delq 'treemacs-mode aw-ignored-buffers)))
          (setq treemacs-no-png-images t
                treemacs-indent-guide-style 'line)
-         (linum-mode -1)
-         ;; (treemacs-indent-guide-mode)
          )
        )
 
@@ -144,6 +142,13 @@ languages, using language server protocols (LSP).
        :after (lsp-mode treemacs)
        :commands lsp-treemacs-errors-list)
    #+end_src
+
+   #+RESULTS:
+
+   # #+begin_src emacs-lisp
+   #   (setq treemacs-mode-hook nil)
+   #   treemacs-mode-hook
+   # #+end_src
 
    #+RESULTS:
 
