--- a/org.org
+++ b/org.org
@@ -4,25 +4,46 @@
 
   Use it a Wiki syntax to take notes and format simple documents
 
+  Overall configuration
+
+  #+begin_src emacs-lisp
+    (defvar fchauvel/notes-library "~/notes")
+  #+end_src
+
+  #+RESULTS:
+  : fchauvel/notes-library
+
 ** Running Code Fragments
    Configure how to run various code fragments
 
    #+begin_src emacs-lisp
-     (org-babel-do-load-languages
-      'org-babel-load-languages
-      '((python . t)
-        (C . t)
-        (dot . t)
-        (R . t)
-        (ruby . t)
-        (shell . t)
-        (screen . t)
-        (scheme . t)
-        (js . t)
-        (java . t)
-        (ditaa . t)))
+          (org-babel-do-load-languages
+           'org-babel-load-languages
+           '((python . t)
+             (C . t)
+             (dot . t)
+             (R . t)
+             (ruby . t)
+             (shell . t)
+             (screen . t)
+             (scheme . t)
+             (js . t)
+             (java . t)
+             (ditaa . t)
+             (restclient . t)))
    #+end_src
 
+   #+RESULTS:
+
+*** R
+
+    #+begin_src emacs-lisp
+      (setq org-babel-R-command "/Library/Frameworks/R.framework/Resources/R --slave --no-save")
+    #+end_src
+
+    #+RESULTS:
+    : /Library/Frameworks/R.framework/Resources/R --slave --no-save
+   
 *** Ditaa
 
     Extra configuration to configure Ditaa (ASCII diagrams)
@@ -32,16 +53,29 @@
     #+end_src
    
 ** BibTeX References
-  Use package ~org-ref~ to get my references available from BibTeX
-   
-  #+begin_src emacs-lisp
-    (use-package org-ref
-      :config
-      (setq reftex-default-bibliography "~/notes/references.bib"
-            org-ref-bibliography-notes "~/notes/references.org"
-            org-ref-default-bibliography '("~/notes/references.bib")
-            org-ref-pdf-directory "~/notes/pdf/"))
+
+   Use package ~org-ref~ to get my references available from BibTeX. We
+   make it point to the ~fchauvel/bibtex-library~ variable (see their definitions
+   in ~latex.org~).
+
+   #+begin_src emacs-lisp
+     (setq bibtex-completion-bibliography (list fchauvel/bibtex-library)
+           bibtex-completion-library-path (list fchauvel/pdf-library)
+           bibtex-completion-notes-path fchauvel/notes-library)
+
+     (use-package helm-bibtex
+       :after (helm))
+
+     (use-package org-ref
+       :after (helm-bibtex)
+       :config
+       (progn
+         (require 'bibtex)
+         (require 'org-ref-helm)))
   #+end_src
+
+  #+RESULTS:
+  
 
 ** Export to PDF / LaTeX
 
@@ -60,24 +94,27 @@
 
   I use it to take notes about various things:
 
+  See the defintion of ~fchauvel/notes-library~ at the top of this
+  file.
+
   #+begin_src emacs-lisp
-      (use-package org-roam
-        :init
-        (setq org-roam-v2-ack t)
-        :hook
-        (after-init . org-roam-mode)
-        :custom
-        (org-roam-directory "~/notes")
-        (org-roam-db-location "~/notes/org-roam.db")
-        (org-roam-index-file "~/notes/index.org")
-        (org-roam-db-update-method 'immediate)
-        :bind (("C-c n l" . org-roam)
-               ("C-c n f" . org-roam-node-find)
-               ("C-c n g" . org-roam-graph)
-               ("C-c n i" . org-roam-insert)
-               ("C-c n I" . org-roam-insert-immediate))
-        :config
-        (org-roam-setup))
+    (use-package org-roam
+      :init
+      (setq org-roam-v2-ack t)
+      :hook
+      (after-init . org-roam-mode)
+      :custom
+      (org-roam-directory fchauvel/notes-library)
+      (org-roam-db-location (concat fchauvel/notes-library "/org-roam.db"))
+      (org-roam-index-file (concat fchauvel/notes-library "/index.org"))
+      (org-roam-db-update-method 'immediate)
+      :bind (("C-c n l" . org-roam)
+             ("C-c n f" . org-roam-node-find)
+             ("C-c n g" . org-roam-graph)
+             ("C-c n i" . org-roam-insert)
+             ("C-c n I" . org-roam-insert-immediate))
+      :config
+      (org-roam-setup))
   #+end_src
 
   #+RESULTS:
